package daw.pr.minesweeper.struct;

public interface Gameplay {


}
