@startuml

title __MINESWEEPER's Class Diagram__\n

  namespace daw.pr.minesweeper {
    class daw.pr.minesweeper.App {
    }
  }
  

  namespace daw.pr.minesweeper {
    class daw.pr.minesweeper.Cell {
    }
  }
  

  namespace daw.pr.minesweeper {
    enum Difficulty {
    }
  }
  

  namespace daw.pr.minesweeper {
    class daw.pr.minesweeper.Game {
    }
  }
  

  namespace daw.pr.minesweeper {
    class daw.pr.minesweeper.SQLDriver {
    }
  }
  

  namespace daw.pr.minesweeper {
    enum StateCanvas {
    }
  }
  

  namespace daw.pr.minesweeper {
    enum StateSelf {
    }
  }
  

  namespace daw.pr.minesweeper {
    class daw.pr.minesweeper.WebApp {
    }
  }
  

  namespace daw.pr.minesweeper {
    interface daw.pr.minesweeper.debug {
    }
  }
  

  namespace daw.pr.minesweeper {
    interface daw.pr.minesweeper.gameplay {
    }
  }
  

  daw.pr.minesweeper.Cell .up.|> daw.pr.minesweeper.debug
  daw.pr.minesweeper.Cell o-- daw.pr.minesweeper.StateCanvas : stateCanvas
  daw.pr.minesweeper.Cell o-- daw.pr.minesweeper.StateSelf : stateSelf
  daw.pr.minesweeper.Game .up.|> daw.pr.minesweeper.debug
  daw.pr.minesweeper.Game .up.|> daw.pr.minesweeper.gameplay
  daw.pr.minesweeper.Game o-- daw.pr.minesweeper.Difficulty : difficulty
  daw.pr.minesweeper.Game o-- daw.pr.minesweeper.SQLDriver : sql
  daw.pr.minesweeper.WebApp o-- daw.pr.minesweeper.Game : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
